--- a/drupal/web/themes/custom/storybook/package.json
+++ b/drupal/web/themes/custom/storybook/package.json
@@ -34,9 +34,16 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-storybook": "^0.8.0",
+    "glob": "^10.4.3",
     "html-react-parser": "^5.1.10",
+    "postcss": "^8.4.39",
+    "postcss-import": "^16.1.0",
+    "postcss-import-ext-glob": "^2.1.1",
+    "postcss-nested": "^6.0.1",
+    "postcss-preset-env": "^9.6.0",
     "prop-types": "^15.8.1",
     "storybook": "^8.1.11",
+    "twig": "^1.17.1",
     "twig-drupal-filters": "^3.2.0",
     "vite": "^5.3.1",
     "vite-plugin-twig-drupal": "^1.3.0"
