--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,6 @@ sonar.projectVersion=1.0
 sonar.sources=.
 sonar.host.url=http://sonarqube:9000
 sonar.login=sqp_abea744536a72429cfb6bc57905c0615def0af8b
+
+sonar.security.php.rules=true
+sonar.security.javascript.rules=true
