--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -15,27 +15,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.0'
+        extensions: mbstring, intl, zip, xdebug
 
     - name: Validate composer.json and composer.lock
+      working-directory: ./drupal
       run: composer validate --strict
 
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v3
       with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+        path: drupal/vendor
+        key: ${{ runner.os }}-php-${{ hashFiles('**/drupal/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
 
     - name: Install dependencies
+      working-directory: ./drupal
       run: composer install --prefer-dist --no-progress
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
+    - name: Run PHPCS
+      working-directory: ./drupal
+      run: |
+        ./vendor/bin/phpcs --standard=PSR12 src/
+        # Generate report in XML format for SonarQube
+        ./vendor/bin/phpcs --standard=PSR12 src/ --report=checkstyle --report-file=build/logs/phpcs.xml
 
-    # - name: Run test suite
-    #   run: composer run-script test
+    - name: Run PHPUnit tests
+      working-directory: ./drupal
+      run: ./vendor/bin/phpunit --log-junit build/logs/phpunit.xml
 
-    
