--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -44,9 +44,9 @@ jobs:
     - name: Run PHPCS
       working-directory: ./drupal
       run: |
-        ./vendor/bin/phpcs --standard=PSR12 src/
+        ./vendor/bin/phpcs --standard=Drupal web/
         # Generate report in XML format for SonarQube
-        ./vendor/bin/phpcs --standard=PSR12 src/ --report=checkstyle --report-file=build/logs/phpcs.xml
+        ./vendor/bin/phpcs --standard=Drupal web/ --report=checkstyle --report-file=build/logs/phpcs.xml
 
     - name: Run PHPUnit tests
       working-directory: ./drupal
