--- a/.github/workflows/php-ci.yml
+++ b/.github/workflows/php-ci.yml
@@ -18,15 +18,18 @@ jobs:
     - name: Checkout PHP project
       uses: actions/checkout@v4
 
-    - name: Set up PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.2'
-        extensions: mbstring, intl, zip, xdebug
+    - name: Set up Docker Compose
+      run: sudo apt-get update && sudo apt-get install -y docker-compose
+
+    - name: Start Docker Compose
+      run: docker-compose -f .docker/docker-compose.yml up -d
+
+    - name: Wait for services to be healthy
+      run: |
+        docker-compose -f .docker/docker-compose.yml exec php bash -c "while ! nc -z localhost 9000; do sleep 1; done"
 
     - name: Validate composer.json and composer.lock
-      working-directory: ./drupal
-      run: composer validate --strict
+      run: docker-compose -f .docker/docker-compose.yml exec php composer validate --strict
 
     - name: Cache Composer packages
       id: composer-cache
@@ -38,15 +41,16 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Install dependencies
-      working-directory: ./drupal
-      run: composer install --prefer-dist --no-progress
+      run: docker-compose -f .docker/docker-compose.yml exec php composer install --prefer-dist --no-progress
 
     - name: Run PHPCS
-      working-directory: ./drupal
       run: |
-        ./vendor/bin/phpcs --standard=Drupal web/
-        ./vendor/bin/phpcs --standard=Drupal web/ --report=checkstyle --report-file=build/logs/phpcs.xml
+        docker-compose -f .docker/docker-compose.yml exec php phpcs --standard=Drupal web/
+        docker-compose -f .docker/docker-compose.yml exec php phpcs --standard=Drupal web/ --report=checkstyle --report-file=build/logs/phpcs.xml
 
     - name: Run PHPUnit tests
-      working-directory: ./drupal
-      run: ./vendor/bin/phpunit --log-junit build/logs/phpunit.xml
+      run: docker-compose -f .docker/docker-compose.yml exec php ./vendor/bin/phpunit --log-junit build/logs/phpunit.xml
+
+    - name: Tear down Docker Compose
+      if: always()
+      run: docker-compose -f .docker/docker-compose.yml down
