--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -27,10 +27,10 @@ jobs:
         node-version: '18'
 
     - name: Install dependencies
-      working-directory: ../
+      working-directory: ./react
       run: npm install
 
     - name: Build project
-      working-directory: ../
+      working-directory: ./react
       run: npm run build
 
